# QA_Auto_hw17

./: README.md  pyproject.toml
