[tool.poetry]
name = "qa-auto-hw17"
version = "0.1.0"
description = "API"
authors = ["Vadim Korolev <vkorol98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selene = "^2.0.0rc9"
requests = "^2.32.3"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
